--- a/index.html
+++ b/index.html
@@ -166,9 +166,6 @@
         </li>
     </ul>
 </li>
-            </ul>
-            <a href="#" class="btn">login</a>
-        </div>
     </header>
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="margin: 4rem auto; width: 100%;">
   <div class="carousel-indicators">
@@ -194,7 +191,6 @@
     <span class="carousel-control-next-icon"></span>
   </button>
 </div>
-    
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <div class="modal fade" id="jeeMainsModal" tabindex="-1" aria-labelledby="jeeMainsModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-lg">
@@ -246,7 +242,7 @@
 <div style="margin: 2rem auto; text-align: center; width: 80%;">
     <img src="image 5.png" alt="Below Carousel Image" style="max-width: 50%; height: 50%; border-radius: 10px;">
 </div>
-<center><h1 style="color: var(--primary-color); margin-top: 5rem 0 2rem;">Topper's Interview</h1></center>
+<center><h1 style="color: black; margin-top: 5rem 0 2rem;">Topper's Interview</h1></center>
     <div class="service-sec">
         <div class="row">
             <div class="card">
@@ -295,7 +291,7 @@
         </div>
         </div>
     </div>
-<center><h1 style="color:var(--primary-color); margin-top: 12rem;">Syllabus PDF's</h1></center>
+<center><h1 style="color:black; margin-top: 12rem;">Syllabus PDF's</h1></center>
     <div class="service-sec">
     <div class="row">
         <div class="card">
@@ -315,7 +311,7 @@
             <div class="card-body">
                 <h3>JEE Advance</h3>
                 <p>Click below to view or download the JEE Advance Syllabus.</p>
-                <a class="btn" href="JEE Advance.pdf" target="_blank">View PDF</a>
+                <a class="btn" href="JEE Advance syllabus.pdf" target="_blank">View PDF</a>
             </div>
         </div>
         <div class="card">
@@ -325,7 +321,7 @@
             <div class="card-body">
                 <h3>NEET</h3>
                 <p>Click below to view or download the NEET Syllabus.</p>
-                <a class="btn" href="NEET.pdf" target="_blank">View PDF</a>
+                <a class="btn" href="NEET syllabus.pdf" target="_blank">View PDF</a>
             </div>
         </div>
     </div>
@@ -468,4 +464,4 @@
   </div>
 </div>
 <script src="project.js"></script>
-</body><!-- trigger redeploy --></html>
+</body></html>
