--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <ul class="nav-menu">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li class="dropdown">
                     <a href="#">Courses</a>
                     <ul class="submenu">
@@ -446,7 +446,7 @@
       E-MAIL
     </a>
 
-    <p style="color: gray; font-size: 13px; margin: 0;">&copy; Copyright, Your Website Name</p>
+    <p style="color: gray; font-size: 13px; margin: 0;">&copy; Copyright, EduPath</p>
   </div>
 </footer>
 <div id="ai-button" onclick="toggleChat()" style="position: fixed; bottom: 30px; right: 30px; background: var(--primary-color); color: white; border-radius: 50%; width: 60px; height: 60px; display: flex; align-items: center; justify-content: center; box-shadow: 0 0 15px var(--primary-color); cursor: pointer; z-index: 1000;">
@@ -464,4 +464,4 @@
   </div>
 </div>
 <script src="project.js"></script>
-</body></html>
+</body></html
