--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="navbar">
             <a href="#" class="logo">
-                <img src="image 1.jpeg" alt="Logo" />
+                <img src="image 1.png" alt="Logo" />
             </a>
             <div class="hamburger" onclick="toggleMenu()">
                 <span></span>
@@ -464,4 +464,4 @@
   </div>
 </div>
 <script src="project.js"></script>
-</body></html
+</body></html>
