--- a/about.html
+++ b/about.html
@@ -10,13 +10,13 @@
     <section class="about-section">
   <div class="about-content" style="display: flex; align-items: center; justify-content: space-around; flex-wrap: wrap; padding: 2rem;">
     <div style="flex: 1; min-width: 300px;">
-      <h2 style="color: black; font-size: 2.5rem; font-weight: bold;">About EduPath</h2>
+      <h2 style="color: black; font-size: 2.5rem; font-weight: bold;">About EduEnhance</h2>
       <h4 style="color: dimgray;">Empowering Every Student — Everywhere</h4>
       <p style="margin-top: 1rem; color: #333; font-size: 16px;">
-        EduPath is a free online learning initiative built to ensure *equal learning opportunities* for every student across India — especially those from under-resourced backgrounds. Our platform provides *free, high-quality educational content* for JEE, NEET, and CBSE (Classes 9–12), with *no login, no subscriptions, and no ads*.
+        EduEnhance is a free online learning initiative built to ensure *equal learning opportunities* for every student across India — especially those from under-resourced backgrounds. Our platform provides *free, high-quality educational content* for JEE, NEET, and CBSE (Classes 9–12), with *no login, no subscriptions, and no ads*.
       </p>
       <p style="margin-top: 1rem; color: #333;">
-        With growing smartphone access in rural and urban areas alike, EduPath removes digital barriers and offers:
+        With growing smartphone access in rural and urban areas alike, EduEnhance removes digital barriers and offers:
         <ul style="margin-top: 1rem; color: #333;">
           <li>📘 Handwritten and typed notes (PDFs)</li>
           <li>📚 NCERT books and toppers' strategies</li>
@@ -29,7 +29,7 @@
     </div>
 
     <div style="flex: 1; min-width: 300px; display: flex; justify-content: center;">
-      <img src="image 7.png" alt="About EduPath" style="width: 90%; max-width: 400px; border-radius: 12px;">
+      <img src="image 7.png" alt="About EduEnhance" style="width: 90%; max-width: 400px; border-radius: 12px;">
     </div>
   </div>
 </section>
